@@ -1,3 +1,9 @@
+2004-02-18  Peter Spjuth  <peter.spjuth@space.se>
+
+	* tests/grid.test:
+	* generic/tkGrid.c: Fixed a bug in grid geometry calculations for
+	a shrinking grid. [Bug 899246]
+
 2004-02-17  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	*** 8.4.6 TAGGED FOR RELEASE ***
